# RiskAware-Complaints-Engine

./: .env.example  .gitignore  AGENT.md  Makefile  README.md  pyproject.toml
configs/: base.yaml  category.yaml  legal.yaml  priority.yaml
docs/: architecture.md  gold_labeling.md
notebooks/: EDA_CFPB.ipynb  baseline_tf_idf.ipynb  baseline_tfidf_optuna_v2.ipynb  distilbert.ipynb  lstm_baseline.ipynb  lstm_v1.ipynb  lstm_v2_v3_scheduler.ipynb  tfidf_baseline.ipynb  tfidf_baseline_final.ipynb  token_length_eda_neural.ipynb
scripts/: analyze_lstm_category.py  create_gold_set.py  error_analysis_category.py  evaluate.py  evaluate_category.py  evaluate_gold.py  generate_final_comparison.py  prepare_data.py  prepare_lstm_data.py  serve.py  train.py  train_category.py  train_lstm_category.py  train_transformer_category.py  tune_category.py  tune_category_optuna.py
src/risk_aware/: __init__.py  config.py
src/risk_aware/api/: __init__.py  app.py
src/risk_aware/data/: prepare.py
src/risk_aware/domain/: __init__.py  schemas.py
src/risk_aware/evaluation/: __init__.py  category_metrics.py
src/risk_aware/features/: __init__.py  assembler.py  encoders.py
src/risk_aware/inference/: __init__.py  category_predictor.py
src/risk_aware/models/: __init__.py  base.py  priority.py  registry.py  stacks.py  thresholds.py
src/risk_aware/pipelines/: __init__.py  category_lstm_training.py  category_training.py  category_transformer_training.py  inference.py  training.py
tests/: test_category_metrics.py  test_prepare.py  test_preprocessing.py  test_thresholds.py
(+12 files in other folders)
