[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "risk-aware-complaints-engine"
version = "0.1.0"
description = "Risk-aware complaint triage pipeline for category, legal threat, and priority prediction."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.26.0,<3.0.0",
  "pandas>=2.2.0,<3.0.0",
  "pydantic>=2.8.0,<3.0.0",
  "pyyaml>=6.0.0,<7.0.0",
  "scikit-learn>=1.5.0,<2.0.0",
  "lightgbm>=4.5.0,<5.0.0",
  "xgboost>=2.1.0,<3.0.0",
  "fastapi>=0.116.0,<1.0.0",
  "uvicorn>=0.35.0,<1.0.0",
  "typer>=0.15.0,<1.0.0",
  "joblib>=1.4.0,<2.0.0",
  "transformers>=4.53.0,<5.0.0",
  "torch>=2.8.0,<3.0.0",
  "datasets>=3.0.0,<4.0.0",
  "evaluate>=0.4.0,<1.0.0",
  "optuna>=3.6.0,<5.0.0",
  "shap>=0.48.0,<1.0.0",
  "evidently>=0.6.0,<1.0.0",
  "mlflow>=2.21.0,<3.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0,<9.0.0",
  "ruff>=0.12.0,<1.0.0",
  "mypy>=1.14.0,<2.0.0",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
